--- a/advent.html
+++ b/advent.html
@@ -9,7 +9,7 @@
 <body>
   <a href="/" class="back-btn">← Back Home</a>
 
-  <h1 class="title">Advert Calendar</h1>
+  <h1 class="title">Advent Calendar</h1>
 
   <div class="calendar">
     <script>
