--- a/advent.html
+++ b/advent.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advert Calendar</title>
-  <link rel="stylesheet" href="advert.css">
+  <title>Advent Calendar</title>
+  <link rel="stylesheet" href="advent.css">
 </head>
 <body>
   <a href="/" class="back-btn">← Back Home</a>
@@ -24,6 +24,6 @@
     </script>
   </div>
 
-  <script src="advert.js"></script>
+  <script src="advent.js"></script>
 </body>
 </html>
