--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="seconds" class="time">00</div>
     </div>
 
-    <a class="advert-btn" href="./advent.html">🎁 Open Advert Calendar</a>
+    <a class="advent-btn" href="./advent.html">🎁 Open Advent Calendar</a>
   </div>
 
   <script src="script.js"></script>
