--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Flight to Manchester</h1>
+    <h1>Flight to Manchester test</h1>
 
     <div class="progress-container">
       <svg viewBox="0 0 200 100" class="progress-arc">
