--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Flight to Manchester test</h1>
+    <h1>Flight to Manchester</h1>
 
     <div class="progress-container">
       <svg viewBox="0 0 200 100" class="progress-arc">
@@ -28,7 +28,8 @@
 
     <a class="advent-btn" href="./advent.html">🎁 Open Advent Calendar</a>
   </div>
-
+  
+  <script src="secrets.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
