--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>✈️ Countdown to Manchester</title>
+  <title>✈️ Flights Countdown</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="plane.png">
 </head>
 <body>
   <div class="container">
-    <h1>Flight to Manchester</h1>
 
     <div class="progress-container">
       <svg viewBox="0 0 200 100" class="progress-arc">
